--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-whitelist": "^1.3.2",
+        "jquery": "^3.2.1",
         "phaser-ce": "^2.8.3",
         "webfontloader": "^1.6.28"
     },
